# fdtd-New-Han

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  configfile.cfg  execuateFDTD.m  fdtd  plotFDTD.m  postdebug.m  postproc.m  processing.m  processing.m~
header/: grid.hpp  grid.hpp~  params.hpp  utils.hpp
src/: chunk.cpp  grid.cpp  main.cpp  params.cpp
